--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
     "@react-navigation/stack": "^5.2.11",
     "axios": "^0.19.2",
     "expo": "~37.0.3",
+    "expo-av": "~8.1.0",
     "expo-linear-gradient": "~8.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^1.6.1",
-    "react-native-image-slider-box": "^1.0.12",
-    "react-native-ratings": "^6.5.0",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.5.0",
